changes some images

--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
+              <a href="img/venue-gallery/6-5.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="img/venue-gallery/6-5.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
