added new images

--- a/index.html
+++ b/index.html
@@ -648,9 +648,9 @@
       </div>
 
       <div class="owl-carousel gallery-carousel">
-        <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1.jpg" alt=""></a>
-        <a href="img/gallery/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2.jpg" alt=""></a>
-        <a href="img/gallery/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3.jpg" alt=""></a>
+        <a href="img/gallery/1-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1-6.jpg" alt=""></a>
+        <a href="img/gallery/2-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2-6.jpg" alt=""></a>
+        <a href="img/gallery/3-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3-6.jpg" alt=""></a>
         <a href="img/gallery/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4.jpg" alt=""></a>
         <a href="img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.jpg" alt=""></a>
         <a href="img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.jpg" alt=""></a>
