reverted some changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" title=""></a>
+        <a href="#intro" class="scrollto"><img src="img/logo-5.png" alt="" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -540,8 +540,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/6-5.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/6-5.jpg" alt="" class="img-fluid">
+              <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -1033,7 +1033,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="img/logo.png" alt="TheEvenet">
+            <img src="img/logo-5.png" alt="TheEvenet">
             <p>The Southern Medicos Annual Research Conference is a comprehensive event that brings together medical professionals, researchers, and students to share knowledge, showcase innovations, and collaborate on the latest advancements in the medical field.</p>
           </div>
 
