added rupee symbol

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">UnderGrads</h5>
-                <h6 class="card-price text-center">1099</h6>
+                <h6 class="card-price text-center">₹1099</h6>
                 <!-- <hr>
                  <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
@@ -865,7 +865,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">PostGrads/Doctors</h5>
-                <h6 class="card-price text-center">2499</h6>
+                <h6 class="card-price text-center">₹2499</h6>
                 <!-- <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
