Changed Day 1 events to workshops

--- a/index.html
+++ b/index.html
@@ -216,18 +216,18 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Event Schedule</h2>
-          <p>Here is our event schedule</p>
+          <p>Here are our events</p>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Workshops</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
+            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Scientific Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>
+            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Culturals</a>
           </li>
         </ul>
 
@@ -240,24 +240,189 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"></div>
               <div class="col-md-10">
                 <h4>Registration</h4>
-                <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
+                <p>Register using the Google Form given below</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>Keynote <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Ophthmology <span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
               </div>
             </div>
 
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>ENT <span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>BPCS<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Forensic Medicine<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Obsterics<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Gynecology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Wet Lab<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>GI Laparroscopy<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>BSS<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Orthopedics<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>ECG & STEMI<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>ICU Care<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Neonatology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Radiology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>ABG Analysis<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Pulmonology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+<!-- 
             <div class="row schedule-item">
               <div class="col-md-2"><time>11:00 AM</time></div>
               <div class="col-md-10">
@@ -311,7 +476,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <!-- End Schdule Day 1 -->
