Added Day 2 & Day 3 events

--- a/index.html
+++ b/index.html
@@ -484,6 +484,95 @@
           <!-- Schdule Day 2 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Research Paper Presentation <span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Research Proposal Presentation<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Poster Presentation<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Case Presentation<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Medical Quiz<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Med-Charades<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Medihunt<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Science Fair<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+<!-- 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
@@ -548,7 +637,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <!-- End Schdule Day 2 -->
@@ -557,6 +646,105 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Short Film Contest<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Flash Mob<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Fashion Parade<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Celebrity Night<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Singing Competition<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Dance Competition<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>DJ Night<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Medi Fun<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
+                </div>
+                <h4>Esports<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - Price</p>
+              </div>
+            </div>
+<!-- 
+            <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -620,7 +808,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <!-- End Schdule Day 2 -->
