--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Short Film Contest<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -663,7 +663,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Flash Mob<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -674,7 +674,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Fashion Parade<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -685,7 +685,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Celebrity Night<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -696,7 +696,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Singing Competition<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -707,7 +707,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Dance Competition<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -718,7 +718,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>DJ Night<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -729,7 +729,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Medi Fun<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 
@@ -740,7 +740,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Esports<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology </p>
               </div>
             </div>
 <!-- 
@@ -808,8 +808,8 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div> -->
-
+            </div>
+ -->
           </div>
           <!-- End Schdule Day 2 -->
 
