Added subtasks for events

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/4-7.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="img/speakers/4-8.jpg" alt="Speaker 4" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">Dr. Renu sulakhe</a></h3>
                 <p>Workshop and Scientific Committee Incharge</p>
@@ -253,8 +253,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>Ophthmology <span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>Ophthalmology <span></span></h4>
+                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - Price</p>
               </div>
             </div>
 
@@ -320,7 +320,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Wet Lab<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - Price</p>
               </div>
             </div>
 
@@ -331,7 +331,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>GI Laparroscopy<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal- Price</p>
               </div>
             </div>
 
@@ -341,8 +341,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>BSS<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>Basic Surgical Skills<span></span></h4>
+                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - Price</p>
               </div>
             </div>
 
@@ -353,7 +353,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Orthopedics<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - Price</p>
               </div>
             </div>
 
@@ -386,7 +386,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Neonatology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing- Price</p>
               </div>
             </div>
 
@@ -407,8 +407,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>ABG Analysis<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>Bio Chemistry<span></span></h4>
+                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - Price</p>
               </div>
             </div>
 
@@ -419,7 +419,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Pulmonology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - Price</p>
               </div>
             </div>
 <!-- 
@@ -1098,7 +1098,7 @@
                   <a data-toggle="collapse" class="collapsed" href="#faq1">What are the dates of the medical workshop? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq1" class="collapse" data-parent="#faq-list">
                     <p>
-                      The medical workshop will take place from june 5 to june 7.
+                      The medical workshop will take place from June 19 to June 21.
                     </p>
                   </div>
                 </li>
