--- a/index.html
+++ b/index.html
@@ -254,7 +254,11 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Ophthalmology <span></span></h4>
-                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - Price</p>
+                <p> 1.Cataract surgery on goat eye
+                    2.Corneal foreign body removal, 
+                    3.Fundus examination, 
+                    4.Sclero corneal suturing, 
+                    5.Sub conjunctival and intraviteral suturing - Price</p>
               </div>
             </div>
 
