Added event details

--- a/index.html
+++ b/index.html
@@ -254,11 +254,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Ophthalmology <span></span></h4>
-                <p> 1.Cataract surgery on goat eye
-                    2.Corneal foreign body removal, 
-                    3.Fundus examination, 
-                    4.Sclero corneal suturing, 
-                    5.Sub conjunctival and intraviteral suturing - Price</p>
+                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - Price</p>
               </div>
             </div>
 
@@ -496,7 +492,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Research Paper Presentation <span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p> A formal platform for sharing original research findings in the medical field at the conference - Price </p>
               </div>
             </div>
 
@@ -507,7 +503,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Research Proposal Presentation<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - Price</p>
               </div>
             </div>
 
@@ -518,7 +514,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Poster Presentation<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - Price</p>
               </div>
             </div>
 
@@ -529,7 +525,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Case Presentation<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - Price</p>
               </div>
             </div>
 
@@ -540,7 +536,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Medical Quiz<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - Price</p>
               </div>
             </div>
 
@@ -551,7 +547,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Med-Charades<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - Price</p>
               </div>
             </div>
 
@@ -562,7 +558,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Medihunt<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - Price</p>
               </div>
             </div>
 
@@ -573,7 +569,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Science Fair<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings - Price</p>
               </div>
             </div>
 <!-- 
