--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/4-8.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="img/speakers/4-15.JPG" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Renu sulakhe</a></h3>
+                <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3>
                 <p>Workshop and Scientific Committee Incharge</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
