--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+        <h3 class="sub-heading">Welcome to this year’s Medical Conference, where we will engage in workshops, scientific events, and 
+          cultural activities designed to foster collaboration and innovation in the medical field.</h3>
 
         <div class="tab-content row justify-content-center">
 
