--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
             <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com/smarc_2k25/?igsh=d3BkNWwxZGl3MGlx&utm_source=qr#" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.instagram.com/smarc_2k25/?igsh=d3BkNWwxZGl3MGlx&utm_source=qr#" target="_blank" rel="noopener noreferrer" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
